stylesheets/main.css
/* main.css */

/* === CSS RESET ===*/

html, body, div, span, applet, object, iframe, abbr, acronym, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block;
}
ol, ul {
  list-style-position: inside;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after, q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
a:focus, button:focus {
  outline: none;
}
button::-moz-focus-inner {
  border: 0;
}


/* === BASIC TAGS ===*/

body {
  font-family: 'Fira Sans', sans-serif;
  line-height: 1.6;
  background-color: #202d55;
}

/* === TEXT === */

h1 {
  color: #262628;
  font-weight: 200;
  font-size: 2em;
  width: 100%;
}

h2 {
  color: #262628;
  font-weight: 200;
}

h3 {
  color: #262628;
  font-weight: 200;
}

h4 {
  color: #262628;
  font-weight: 200;
}

p {
  color: #262628;
}

a {
  color: #488dcb;
  text-decoration: none;
}


/* === HEADER === */

header {
  position: fixed;
  width: 100%;
  height: 100vh;
  background-image: url("/images/universe.jpg");
}

.particles-js-canvas-el {
  position: fixed;
  z-index: 0;
}

nav {
 font-family: "silombold", monospace;
 position: fixed;
 top: 57vh;
 width: 100vw;
 z-index: 5;
 display: flex;
 justify-content: center;
}

nav a {
  color: white;
  font-size: 2em;
  margin-left: 0.5em;
  margin-right: 0.5em;
}

@media (max-width: 620px) {
  nav a {
    font-size: 1.5em !important;
  }
}

nav a:hover {
  color: #488dcb;
}

.ctflLogo {
  max-width: 100%;
  max-width: 800px;
  /* change logo size with margin l & r */
  margin-left: 30%;
  margin-right: 30%;
  margin-top: 4em;
  position: fixed;
}

@media (max-width: 800px) {
  .ctflLogo {
    margin-left: 10%;
    margin-right: 10%;
  }
}

.earth {
  position: fixed;
  top: 75vh;
  margin-left: 25%;
  margin-right: 25%;
  width: 50%;
  z-index: 10;
}

@media (max-width: 620px) {
  .earth {
    top: 80vh;
    margin-left: 5%;
    margin-right: 5%;
    width: 90%;
  }
}


/* === CONTENT === */

.content {
  position: absolute;
  margin-top: 92.5vh;
  z-index: 100;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.card {
  background-color: white;
  max-width: 1280px;
  width: 100%;
  margin-top: 1em;
  margin-bottom: 2em;
  margin-left: 4em;
  margin-right: 4em;
  border-radius: 3px;
  padding-left: 2em;
  padding-right: 2em;
  padding-bottom: 1em;
  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
}

@media (max-width: 620px) {
  .card {
    max-width: 98% !important;
    margin-left: 0.5em;
    margin-right: 0.5em;
    padding-left: 1em;
    padding-right: 1em;
  }
}

.cardcontent {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-right: 0em;
}

/* === ABOUT === */

.about {
}

.about .cardcontent p {
  max-width: 600px;
  min-width: 200px;
  flex-grow: 2;
}

.about img {
  width: 17em;
  height: 12.565em;
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}


/* === PROJECTS === */

.projects {}

.projectCollection {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-right: 2em;
}

.project {
  max-width: 300px;
  margin-bottom: 1em;
}

.project h2 {
  margin-bottom: 0em;
  margin-left: 0.25em;
}

.project h3 {
  margin-top: 0.25em;
  margin-left: 0.25em;
}

.project p {
  margin-left: 0.25em;
}

.project a {
  float: right;
}

.projectImg {
  max-width: 300px;
  height: 150px;
  border-style: none;
  border-radius: 5px;
  background-size: cover;
  background-position:center center;
}

.projectImg * {
  color: white;
  margin: 0em;
  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
}

.foerdefunk h2 {
  border-bottom: solid 2px red;
}

.foerdefunkImg {
  background-image: url("/images/projectimages/foerdefunkmap.jpg");
}

.druck h2 {
  border-bottom: solid 2px #488dcb;
}

.druckImg {
  background-image: url("/images/projectimages/druck.jpg");
}

.textil h2 {
  border-bottom: solid 2px yellow;
}

.textilImg {
  background-image: url("/images/projectimages/textil.jpg");
}

/* === JOIN US === */

.join .cardcontent p {
  max-width: 500px;
  min-width: 200px;
  flex-grow: 2;
}

.googleMaps {
  max-width: 500px;
  width: 90%;
  max-height: 370px;
  min-height: 300px;
  margin-bottom: 1em;
}

/* === CONTACT === */

.donations {
  max-width: 500px;
}


/* === SATZUNG === */

.satzungcontent {
  position: absolute;
  margin-top: 5vh;
  z-index: 100;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

